--- a/index.html
+++ b/index.html
@@ -13,113 +13,136 @@
 </head>
 <body>
     <!-- header -->
-    <header class="header">
-        <div class="logo"><span>S</span>KY</div>
-        <ul class="nav">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="#Contact">Contact</a></li>
-        </ul>
-    </header>
-    <!-- home section -->
-    <section class="home">
-        <div class="info">
-            <h3>Hey I'M</h3>
-            <h1>Yashika</h1>
-            <h3>An aspiring <span>Front-end developer </span></h3>
-            <h5>Th one who has a great ambition to become skillfull and contribute in big companies who is constantly honing my skills to stay on top of the latest trends and technologies in the ever-evolving world of web development.</h5>
-            <a href="Myresume.jpg" class="btn">Explore CV</a>
-
+        <div header class="header">
+            <div class="logo"><span>S</span>KY</div>
+            <div class="bx bx-menu" id="menu-icon"></div>
+            <ul class="nav">
+                <li><a href="#Home" class="active">Home<span></span></a></li>
+                <li><a href="#About">About<span></span></a></li>
+                <li><a href="#education">Education <span></span></a></li>
+                <li><a href="#Contact">Contact <span></span></a></li>
+            </ul>
         </div>
-        <div class="img">
-            <img src="mine.jpg" alt="">
-        </div>
-    </section>
-    <!-- about section -->
-    <section class="aboutme" id="About">
-        <h2>About <span>Me</span></h2>
-        <hr>
-        <h5>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</h5>
-        <div class="content">
-            <div class="about">
-                <h3>Get To Know <span>Me</span>!!</h3>
-                <p>
-                    Hello, I'm Yashika a passionate frontend developer with a keen eye for design and a love for creating seamless user experiences on the web. With a background in technologies, I'm excited to share my journey into the world of web development and design.
-                </p>
-                <p>
-                    I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me
-                </p>
-                
+        <!-- home section -->
+        <section class="home animate">
+            <div class="info">
+                <h3>Hey I'M</h3>
+                <h1>Yashika</h1>
+                <h3>An aspiring <div class="text"><h3 class="text-animate">Front-end developer </h3></div> </h3>
+                <h5>Th one who has a great ambition to become skillfull and contribute in big companies who is constantly honing my skills to stay on top of the latest trends and technologies in the ever-evolving world of web development.</h5>
+                <a href="Myresume.jpg" class="btn">Explore CV</a>
             </div>
-            <div class="myskills">
-                <h3><span>My</span> skills</h3>
-                <div class="skill">
-                    <div class="skills_">HTML</div>
-                    <div class="skills_">CSS</div>
-                    <div class="skills_">JAVASCRIPT basics</div>
-                    <div class="skills_">Responsive Design</div>
-                    <div class="skills_">Git Basics</div>
+            <div class="img">
+                <img src="mine.jpg" alt="">
+            </div>
+        </section>
+        <!-- about section -->
+        <section class="aboutme" id="About">
+            <h2>About <span>Me</span></h2>
+            <hr>
+            <h5>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology</h5>
+            <div class="content">
+                <div class="about">
+                    <h3>Get To Know <span>Me</span>!!</h3>
+                    <p>
+                        Hello, I'm Yashika a passionate frontend developer with a keen eye for design and a love for creating seamless user experiences on the web. With a background in technologies, I'm excited to share my journey into the world of web development and design.
+                    </p>
+                    <p>
+                        I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me
+                    </p>
+                    <a href="" class="btn">let's talk</a>
+                </div>
+                <div class="myskills">
+                    <h3><span>My</span> skills</h3>
+                    <div class="skills-box">
+                        <div class="skills-content">
+                            <div class="progress">
+                                <h4>HTML <span>90%</span></h4>
+                                <div class="bar"><span></span></div>
+                            </div>
+                            <div class="progress">
+                                <h4>CSS<span>80%</span></h4>
+                                <div class="bar"><span></span></div>
+                            </div>
+                            <div class="progress">
+                                <h4>JAVASCRIPT <span>70%</span></h4>
+                                <div class="bar"><span></span></div>
+                            </div>
+                            <div class="progress">
+                                <h4>REACT <span>55%</span></h4>
+                                <div class="bar"><span></span></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- Projects section -->
-    <section class="projects"  id="Projects">
-        <h2>PROJECT<span>S</span></h2>
-        <hr>
-        <div class="container">
-            <div class="project">
-                <img src="project-1.png">
-                <div class="project-info">
-                    <h4><span>Landing</span>-page</h4>
-                    <p>I designed a captivating landing page for DoorDash using a blend of HTML and CSS, effectively capturing the essence of their brand.</p>
-                    <a href="https://mellifluous-dolphin-9c81df.netlify.app/" class="btn">Explore<i class='bx bx-link-external'></i></i></a>
+        </section>
+        <!-- Projects section -->
+        <section class="projects"  id="Projects">
+            <h2>PROJECT<span>S</span></h2>
+            <hr>
+            <div class="container">
+                <div class="project">
+                    <img src="project-1.png">
+                    <div class="project-info">
+                        <h4><span>Landing</span>-page</h4>
+                        <p>I designed a captivating landing page for DoorDash using a blend of HTML and CSS, effectively capturing the essence of their brand.</p>
+                        <a href="https://mellifluous-dolphin-9c81df.netlify.app/" class="btn">Explore<i class='bx bx-link-external'></i></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="project-2.png">
+                    <div class="project-info">
+                        <h4><span>Login</span>-form</h4>
+                        <p>I crafted a feature-rich login form using HTML, CSS, and JavaScript, providing users with an intuitive and secure way to access web applications.</p>
+                        <a href="https://main--simplifiiproject-8.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+                    </div>
+                </div>
+                <!-- <div class="project">
+                    <img src="project-3.png">
+                    <div class="project-info">
+                        <h4><span>Background</span>-selector</h4>
+                        <p>I created a dynamic background selector using HTML and CSS, allowing users to customize the visual aesthetics of a webpage. This interactive tool presents users with a range of background options, each triggering a unique visual theme upon selection. </p>
+                        <a href="https://main--simplifyproject7.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+                    </div>
+                </div> -->
+                <div class="project">
+                    <img src="project-4.png">
+                    <div class="project-info">
+                        <h4><span>Survey</span>-form</h4>
+                        <p>I designed and developed an interactive Responsive survey form using HTML, CSS, to create engaging user experiences. </p>
+                        <a href="https://simplifilabsproject4.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+                    </div>
                 </div>
             </div>
-            <div class="project">
-                <img src="project-2.png">
-                <div class="project-info">
-                    <h4><span>Login</span>-form</h4>
-                    <p>I crafted a feature-rich login form using HTML, CSS, and JavaScript, providing users with an intuitive and secure way to access web applications.</p>
-                    <a href="https://main--simplifiiproject-8.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+        </section>
+        <!-- contact section -->
+        <section class="contact" id="Contact">
+            <h2>Contact <span>Me</span>!</h2>
+            <hr>
+            <h5>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h5>
+            <div class="box">
+                <div class="input_1">
+                    <div class="input-box">
+                        <input type="text" placeholder="Full Name"></div>
+                    <div class="input-box">
+                        <input type="Email" placeholder="Email">
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="project-3.png">
-                <div class="project-info">
-                    <h4><span>Background</span>-selector</h4>
-                    <p>I created a dynamic background selector using HTML and CSS, allowing users to customize the visual aesthetics of a webpage. This interactive tool presents users with a range of background options, each triggering a unique visual theme upon selection. </p>
-                    <a href="https://main--simplifyproject7.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+                <div class="input_2">
+                    <div class="mobileno">
+                        <input type="number" placeholder="Mobile number">
+                    </div>
+                    <div class="input-box">
+                        <input type="text" placeholder="Email subject">
+                    </div>
                 </div>
-            </div>
-            <div class="project">
-                <img src="project-4.png">
-                <div class="project-info">
-                    <h4><span>Survey</span>-form</h4>
-                    <p>I designed and developed an interactive Responsive survey form using HTML, CSS, to create engaging user experiences. </p>
-                    <a href="https://simplifilabsproject4.netlify.app/" class="btn">Explore<i class="bx bx-link-external"></i></a>
+                <div class="input_3">
+                        <textarea name="" id="" cols="55" rows="7" placeholder="Enter Your Message"></textarea>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!-- contact section -->
-    <section class="contact" id="Contact">
-        <h2>Contact <span>Me</span>!</h2>
-        <hr>
-        <h5>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h5>
-        <div class="box">
-            <form action="">
-                <label for="Name">Name:</label>
-                <input type="text" placeholder="Enter Full Name">
-                <label for="Email">Email:</label>
-                <input type="Email" placeholder="Enter Your Email">
-                <label for="Message">Message:</label>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
                 <input type="submit" class="btn" value="submit">
-            </form>
-        </div>
-    </section>
+            </div>
+        </section>
     <script src="script.js"></script>
 </body>
 </html>
